--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -1,5 +1,5 @@
 .global {
-    --element-color: #00bd7a;
+    --element-color: #0078bd;
     --transition: all 0.5s cubic-bezier(1, 0.46, 0, 1.29);
     --dark-color: #292929;
     --light-color: rgb(245, 245, 245);
@@ -7,9 +7,9 @@
 
 .dark {
     --color: #F5F5F5;
-    --background: #292929;
+    --background: #0e0e0e;
     --background-element: #424242;
-    --background-transparent: #2c2c2ccc;
+    --background-transparent: #333;
     --shadow: rgba(25, 25, 25, 0.7);
     --svg-color: brightness(0) saturate(100%) invert(100%) sepia(55%) saturate(23%) hue-rotate(236deg) brightness(108%) contrast(92%);
 }
